# ultralytics-sam3-install

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  install.sh  pyproject.toml  test_runner.py
.cursor/commands/: fixit.md
demo/: 01-person-tracker-with-sam3.md  01-person-tracker-with-sam3.py  01-person-tracker-with-sam3.sh
tests/: 01-installation-test-plan.md  02-verification-test-plan.md  03-usage-test-plan.md  04-development-test-plan.md
tests/v8.3.237/: test-plan.md
tests/v8.3.237/00-basic/: 01-text-prompts.md  01-text-prompts.py  02-visual-prompts.md  02-visual-prompts.py  03-exemplar-segmentation.md  03-exemplar-segmentation.py  04-video-tracking.md  04-video-tracking.py  05-gpu-usage.md  05-gpu-usage.py
tests/v8.3.237/01-sam3-integration/: 01-sam3-model-builder-stack.md  02-sam3-model-initialization.md  03-sam3-semantic-model.md  04-sam-entrypoint-detection.md  05-build-interactive-sam3.md
tests/v8.3.237/02-sam3-predictors/: 01-sam3-predictor-basic.md  02-sam3-semantic-predictor-text.md  03-sam3-semantic-predictor-exemplar.md  04-sam3-video-predictor-boxes.md  05-sam3-video-semantic-predictor.md  06-task-map-routing.md  07-predictor-exports.md
tests/v8.3.237/03-sam-pipeline-upgrades/: 01-setup-source-stride.md  02-square-image-enforcement.md  03-memory-encoder-flexibility.md  04-mask-downsampler-tests.md  05-memory-attention-custom.md  06-sam3-mask-postprocessing.md  07-non-overlap-suppression.md
tests/v8.3.237/04-onnx-fp16-export/: 01-cpu-fp16-export.md  02-weight-conversion.md  03-io-type-preservation.md  04-graceful-failure-handling.md
tests/v8.3.237/05-edgetpu-imx-export/: 01-check-apt-requirements.md  02-edgetpu-export-deps.md  03-imx-export-java-deps.md  04-apt-update-error-handling.md
tests/v8.3.237/06-resume-training-override/: 01-save-period-override.md  02-workers-override.md  03-cache-override.md  04-patience-override.md  05-time-override.md  (+3 more)
(+13 files in other folders)
