[project]
name = "ultralytics-sam3-install"
version = "0.1.0"
description = "Installation setup for Ultralytics with SAM3 integration and GPU support"
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # Ultralytics and SAM3 are installed from submodules in editable mode
    # PyTorch with CUDA will be installed separately in install.sh to ensure GPU support
    # SAM3 dependencies
    "timm>=1.0.17",
    "numpy==1.26",
    "tqdm",
    "ftfy==6.1.1",
    "regex",
    "iopath>=0.1.10",
    "typing_extensions",
    "huggingface_hub",
    # Test dependencies
    "matplotlib",
    "opencv-python",
    "pillow",
    # Supervision dependencies
    "defusedxml",
    "supervision",
    # Video download dependencies
    "yt-dlp",
    # Editable dependencies from submodules (sources defined in [tool.uv.sources])
    "ultralytics",
    "sam3",
]

[tool.uv.sources]
ultralytics = { path = "submodules/ultralytics", editable = true }
sam3 = { path = "submodules/sam3", editable = true }
supervision = { path = "submodules/supervision", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ultralytics_sam3_install"]

[dependency-groups]
dev = []

